Rework resources to handle uri